--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   },
   "homepage": "https://github.com/hodansuleiman/Reactfullstack#readme",
   "devDependencies": {
+    "react-router-dom": "^6.14.1",
     "vite": "^4.4.1"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
