--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "vite": "^4.4.1"
   },
   "dependencies": {
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sort-by": "^1.2.0"
   }
 }
