--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "pg": "^8.11.1",
+    "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "styled-components": "^6.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
