--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "node-fetch": "^3.3.1",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
