--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -18,6 +18,8 @@
     "express": "^4.18.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.3.4",
     "node-fetch": "^3.3.1",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
