--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/hodansuleiman/Reactfullstack#readme",
   "devDependencies": {
+    "nodemon": "^3.0.1",
     "react-router-dom": "^6.14.1",
     "vite": "^4.4.1"
   },
@@ -34,7 +36,6 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.4",
     "node": "^20.4.0",
-    "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
