add route config for api/

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "rewrites": [
-    { "source": "/:path*", "destination": "/index.html" }
+    { "source": "/:path*", "destination": "/index.html" },
+    { "source": "/api/(.*)", "destination": "server.js"}
   ]
-}
+} 
