--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
-  "rewrites": [
-    { "source": "/:path*", "destination": "/index.html" },
-    { "source": "/api/(.*)", "destination": "server.js"}
+  "version": 2,
+  "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "server.js"
+      }
   ]
-} 
+}
