--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
   "version": 2,
+  "builds": [
+    {
+        "src": "my-react-app/src/main.js",
+        "use": "@vercel/node"
+    }
+  ],
   "routes": [
       {
         "src": "/(.*)",
