--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "postinstall": "cd my-react-app/ && npm install && npm run build && cd .. && mv my-react-app/dist/ dist/",
+    "postinstall": "rimraf dist && cd my-react-app/ && npm install && npm run build && cd .. && mv my-react-app/dist/ dist/",
     "dev": "nodemon server.js",
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -42,6 +42,7 @@
     "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rimraf": "^5.0.1",
     "sort-by": "^1.2.0"
   }
 }
