--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
   "version": 2,
+  "builds": [
+    {
+        "src": "server.js",
+        "use": "@vercel/node"
+    }
+  ],
   "routes": [
       {
         "src": "/api/(.*)",
@@ -7,7 +13,8 @@
       },
       {
         "src": "/",
-        "dest": "dist/index.html"
+        "dest": "public/index.html"
       }
-  ]
+  ],
+  "framework": null
 }
